[FIX] mail: correct chat window ratio on Safari
Before this commit, chat window size on Safari sometimes look off.

The intended sizing is 380px in width and 9/15 ratio, with height
being limited by 95vh.

Safari `aspect-ratio` has strange behavior: instead of shrinking
just the height from max-height, it gives too much priority on
enforcing the aspect-ratio, thus the chat window becomes thinner
and thinner the less vertical space there are.

This commit fixes the issue by replacing the `aspect-ratio` style
by a max-height that is computed with ratio and 95vh.

--- a/addons/mail/static/src/core/common/chat_window.scss
+++ b/addons/mail/static/src/core/common/chat_window.scss
@@ -4,7 +4,7 @@
     z-index: $zindex-dropdown + 1;
     &:not(.o-mobile) {
         --border-opacity: .15;
-        aspect-ratio: 9 / 15;
+        height: Min(95vh, $o-mail-ChatWindow-width * 15 / 9)
     }
     outline: none;
 }
